<resources>
    <string name="app_name" translatable="false">E-Shoe</string>
    <string name="button_scan">Scan</string>
    <string name="image_example">Device example image</string>
    <string name="scan_empty_header">No result</string>
    <string name="scan_empty_body">Devices not found, please, check that all the connections are good</string>
    <string name="debug_noinfo">No info</string>
    <string name="debug_nodevice">No device</string>
    <string name="device_getData">Get Data</string>
    <string name="app_settings">Settings</string>
    <string name="app_debug_action">Active Debug</string>
    <string name="device_name">Virtual Device</string>
    <string name="lbl_datapersecond">Frames per second</string>
    <string name="total_steps">Total Steps</string>
    <string name="average_lbl">Average</string>
    <string name="lbl_pronation">Pronator</string>
    <string name="lbl_supination">Supinator</string>
    <string name="lbl_neutral">Neutral</string>
    <string name="lbl_unknown">Unknown</string>
    <string name="lbl_landing">Landing</string>
    <string name="lbl_lift">Lift</string>
    <string name="lbl_lift_up">Lift Up</string>
    <string name="lbl_rest">Rest</string>
    <string name="app_foot_change">Change foot</string>
</resources>
